<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preferences_title"
        app:iconSpaceReserved="false">

        <ListPreference
            app:entries="@array/listOptions"
            app:entryValues="@array/listValues"
            app:key="@string/metric_system_key"
            app:summary="@string/metric_system_default_summary"
            app:title="@string/metric_system_title"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/height_key"
            app:summary="@string/height_default_summary"
            app:title="@string/height_title"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>
</PreferenceScreen>  
